Update README by removing requirements and troubleshooting
Removed requirements and troubleshooting sections from README.